[package]
name = "pandoc-norg-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
pandoc_types = "0.5"
tree-sitter = "0.20.9"
tree-sitter-norg = { git = "https://github.com/JCapucho/tree-sitter-norg.git", rev = "136303707910d83cf1df4da816f8413155ba1038" }
serde_json = "1.0"
