[package]
name = "pandoc-norg-rs"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
pandoc-norg-converter = { path = "pandoc-norg-converter", features = ["serde"] }

[package.metadata.nix]
app = true
build = true

[workspace]
members = [".", "pandoc-norg-converter"]
default-members = [".", "pandoc-norg-converter"]
