[package]
name = "pandoc-norg-converter"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-or-later"

[dependencies]
pandoc_types = "0.5"
tree-sitter = "0.20"
tree-sitter-norg = { git = "https://github.com/JCapucho/tree-sitter-norg.git", rev = "136303707910d83cf1df4da816f8413155ba1038" }
log = "0.4"
serde  = { version = "1.0", optional = true }
