[package]
name = "pandoc-norg-converter"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-or-later"

[dependencies]
pandoc_types = "0.5"
tree-sitter = "0.20"
tree-sitter-norg = { git = "https://github.com/nvim-neorg/tree-sitter-norg.git", rev = "1a305093569632de50f9a316ff843dcda25b4ef5" }
log = "0.4"
serde  = { version = "1.0", optional = true }
